# MLHomeServer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  check.sh  config.yml  pyproject.toml  settings.py  setup.cfg  start.sh  train.sh
.github/workflows/: deploy.yml  docker.yml  tests.yml
assets/server_scripts/: install_docker.sh  update_docker.sh
data/aidtec/: test.csv  train.csv
data/efficiency/: test_set_efEnergetica(in).csv  train.csv
src/mlhomeserver/: Dockerfile  competitions.toml  competitions.yml  config.py  exceptions.py  logging_config.py  main.py  parser.py  schemas.py  settings.py  utils.py
src/mlhomeserver/api/: routers.py  schemas.py  utils.py
src/mlhomeserver/api/endpoints/: about.py  aidtec.py  model.py  predictions.py
src/mlhomeserver/ml/: desafios_settings.py  exceptions.py
src/mlhomeserver/ml/data_processing/: aidtec_transformer.py  efficiency_transformer.py  preprocessors.py  tictactoe_transformer.py
src/mlhomeserver/ml/predicting/: predict.py  predictor.py
src/mlhomeserver/ml/training/: aidtec_training.py  train.py  trainer.py  trainers.py
src/mlhomeserver/ml/utilities/: helpers.py  wrappers.py
tests/: conftest.py  test_dataparser.py  test_example.py  test_utils.py
tests/test_endpoints/: test_about.py  test_model.py  test_predictions.py
tests/test_ml/: test_aidtec_preprocessor.py  test_helpers.py  test_trainer.py  test_wrappers.py
