[tool.poetry]
name = "mlhomeserver"
version = "0.1.3"
description = "Servidor Casero para correr predicciones de modelos ML"
authors = ["sertemo <tejedor.moreno@gmail.com>"]
readme = "README.md"
packages = [{include = "mlhomeserver", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
scikit-learn = "^1.5.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
toml = "^0.10.2"
jinja2 = "^3.1.4"
update = "^0.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"
httpx = "^0.27.0"
pandas = "^2.2.2"
pytest-mock = "^3.14.0"
fastapi = "^0.111.0"
toml = "^0.10.2"
joblib = "^1.4.2"
scikit-learn = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.pytest.ini_options]
addopts = "--cov=mlhomeserver"
testpaths = [
   "tests",
]
pythonpath = ["src"]
markers = [
   "localtest: solo tests en local",
]